--- a/app/src/main/res/layout/activity_pet_list.xml
+++ b/app/src/main/res/layout/activity_pet_list.xml
@@ -26,6 +26,13 @@
         android:onClick="selectPetImage"
         android:clickable="true"/>
 
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="phone" />
+
     <Button
         android:id="@+id/addPetButton"
         android:layout_width="match_parent"
